objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case study</fullName>
                </value>
                <value>
                    <fullName>Competitive analysis</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Public relations</fullName>
                </value>
                <value>
                    <fullName>Product collateral</fullName>
                </value>
                <value>
                    <fullName>Sales presentation</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>White paper</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product manual</fullName>
                </value>
                <value>
                    <fullName>Firmware</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External-Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>MarketingDocument</fullName>
        <active>true</active>
        <label>Marketing Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesAsset</fullName>
        <active>true</active>
        <label>Sales Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>SupportDocument</fullName>
        <active>true</active>
        <label>Support Document</label>
    </recordTypes>
</CustomObject>